Fixed scrollbar. Now, I should add better styling. Tofix: Zodiac, the last movie, appears first(the other movies are in alphabetical order). Tofix: google geolocation does not work perfectly well(limited to 10 geolocations).

--- a/static/indexStyle.css
+++ b/static/indexStyle.css
@@ -16,6 +16,10 @@ left:0;
 .extra{
 }
 
+.searchBox{
+width:100%;
+}
+
 .searchContainer{
 z-index:2;
 position:absolute;
